<resources>
    <string name="app_name">Stats For League</string>
    <string name="championsButton">Champions</string>
    <string name="title_activity_champions">ChampionsActivity</string>
    <string name="summonersButton">Summoners</string>
    <string name="thirdButton">Third</string>
    <string name="homeButton">Home</string>
    <string name="searchChampionInfoButton">Info</string>
    <string name="welcomeText">Welcome to the app!</string>
    <string name="browseText">Feel free to browse through the tabs</string>
    <string name="summonerText">Find your summoner</string>
    <string name="usernameTextField">Enter username</string>
    <string name="searchSummonerButton">Search</string>
    <string name="championText">This is the champion information screen</string>
    <string name="summoner_name">Summoner name: %1$s</string>
    <string name="summoner_level">Summoner level: %1$s</string>
    <string name="summoner_account_id">Summoner account id: %1$s</string>
    <string name="summoner_summoner_id">Summoner summoner id: %1$s</string>
    <string name="summoner_profile_icon_id">Summoner profile icon id: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_champions">Champions</string>

    <string name="pref_color_label">App color</string>
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_purple">Purple</string>
    <string name="pref_color_key">color</string>
    <string name="pref_color_value_red">red</string>
    <string name="pref_color_value_purple">purple</string>
</resources>
