<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/homeButton"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_summoner"
            android:enabled="true"
            android:icon="@drawable/ic_search"
            android:title="@string/searchSummonerButton"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_info"
            android:enabled="true"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/searchChampionInfoButton"
            app:showAsAction="ifRoom" />
    </group>
</menu>